# auto-yes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.cursor/skills/auto-yes-conventions/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/auto_yes/: __init__.py  __main__.py  _ansi.py  cli.py  config.py  detector.py  patterns.py  runner.py
tests/: test_ansi.py  test_config.py  test_detector.py  test_patterns.py
