[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-yes"
version = "0.9.1"
description = "Automatically respond 'yes' to interactive CLI prompts via PTY proxy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "auto-yes contributors" },
]
keywords = ["cli", "automation", "yes", "prompt", "pty", "terminal", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
windows = ["pywinpty>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
auto-yes = "auto_yes.cli:main"
ay = "auto_yes.cli:main"

[project.urls]
Homepage = "https://github.com/clemente0731/auto-yes"
Documentation = "https://github.com/clemente0731/auto-yes#readme"
Repository = "https://github.com/clemente0731/auto-yes"
Issues = "https://github.com/clemente0731/auto-yes/issues"
Changelog = "https://github.com/clemente0731/auto-yes/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_yes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["auto_yes"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "UP031",  # allow %-format
    "SIM108", # no ternary expressions (user rule)
]

[tool.ruff.lint.isort]
known-first-party = ["auto_yes"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
